Bug 1217226: P1. Use VideoInfo display size data rather than attempt to detect value in stream. r=cpearce

The VideoInfo data now contains accurate and up to date information about the video display size, its aspect ratio and borders.

While the WMF can determine those values for H264 through the SPS NAL, it can't be done reliably for a VP9 stream.

Picture size is still determined by the WMF to ensure the allocated DXVA texture has the right size.